--- a/src/component/basic/metaNormal.ejs
+++ b/src/component/basic/metaNormal.ejs
@@ -6,4 +6,7 @@
 <meta content="webkit" name="renderer" />-->
 <meta name="keywords" content="嘉福平台、嘉福、嘉福福利、税务筹划、员工福利、薪酬管理、企业福利、薪酬福利、福利定制、弹性福利、员工激励、集采、福利培训、礼品采购、职工福利、福利保险、非现金福利、企业福利外包、员工体检、员工健康。"/>
 <meta name="description" content="专注在弹性福利领域，面对企业提供服务，帮助企业发放和管理员工福利、奖励。"/>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://www.jia-fu.cn/images/icon/icon.png" type="image/x-icon">
+<meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
+<meta HTTP-EQUIV="Expires" CONTENT="0">
