--- a/src/component/basic/top_nav.ejs
+++ b/src/component/basic/top_nav.ejs
@@ -51,9 +51,10 @@
                     <div class="phone_box">
                         <div class="triangle"></div>
                         <div class="num">企业咨询：</div>
-                        <div class="num"><span>010-56280622<span class="special">（上海）</span><span>021-64280689</span><span class="special">（北京）</span></div>
+                        <div class="num"><span>010-57185561<span class="special">（北京）</span><span>021-64280689</span><span class="special">（上海）</span></span></div>
                         <div class="num">员工客服：</div>
-                        <div class="num"><span>400-821-6990</span><span class="special">（在线时间：工作日9:00-17:30）</span></div>
+                        <div class="num"><span>400-821-6990</span><span class="special">（在线时间：工作日8:00-20:00）</span>
+                        </div>
                     </div>
                 </div>
             </div>
