--- a/src/component/basic/top_nav_new.ejs
+++ b/src/component/basic/top_nav_new.ejs
@@ -8,41 +8,21 @@
             <!--jf 分类-->
             <div class="jf_nav_content">
                 <ul>
-                    <li
-                            <% if (tabone) { %>
-                            class="show"
-                            <% } %>
-                    >
+                    <li<% if (tabone) { %> class="show"<% } %>>
                         <a href="main.html">首页</a>
                     </li>
-                    <li
-                            <% if (tabtwo) { %>
-                            class="show"
-                            <% } %>
-                    >
+                    <li<% if (tabtwo) { %> class="show"<% } %>>
                         <a href="platform.html">平台介绍</a>
                     </li>
-                    <li
-                            <% if (tabthree) { %>
-                            class="show"
-                            <% } %>
-                    >
+                    <li<% if (tabthree) { %> class="show"<% } %>>
                         <a href="open_platform.html">开放平台
                         </a>
                     </li>
-                    <li
-                            <% if (tabfour) { %>
-                            class="show"
-                            <% } %>
-                    >
+                    <li<% if (tabfour) { %> class="show"<% } %>>
                         <a href="about_jf.html">关于嘉福
                         </a>
                     </li>
-                    <li
-                            <% if (tabfive) { %>
-                            class="show"
-                            <% } %>
-                    >
+                    <li<% if (tabfive) { %> class="show"<% } %>>
                         <a href="contact_us.html">
                             联系我们
                         </a>
@@ -63,13 +43,9 @@
                     <div class="phone_box">
                         <div class="triangle"></div>
                         <div class="num">企业咨询：</div>
-                        <div class="num">
-                            <span>010-56280622<span class="special">（上海）</span></span>
-                            <span>021-64280689</span>
-                            <span class="special">（北京）</span>
-                        </div>
+                        <div class="num"><span>010-57185561<span class="special">（北京）</span><span>021-64280689</span><span class="special">（上海）</span></span></div>
                         <div class="num">员工客服：</div>
-                        <div class="num"><span>400-821-6990</span><span class="special">（在线时间：工作日9:00-17:30）</span>
+                        <div class="num"><span>400-821-6990</span><span class="special">（在线时间：工作日8:00-20:00）</span>
                         </div>
                     </div>
                     <!-- 二维码-->
