--- a/src/component/contact/form.ejs
+++ b/src/component/contact/form.ejs
@@ -11,19 +11,19 @@
 
             <div class="email">
                 <img src='images/email.png'>
-                <span>sales@ijafu.com</span>
+                <span>sales@jafu.com</span>
             </div>
             <div class="wechat">
                 <img src='images/wechat.png'>
                 <span>
                 <p>400-821-6990</p>
-                <p>服务时间：周一至周五（9：00-17：30）</p>
+                <p>服务时间：周一至周五（8：00-20：00）</p>
                     </span>
             </div>
             <div class="pbone">
                 <img src='images/phone.png'>
                     <span>
-                        <p>010-56280622</p>
+                        <p>010-57185561</p>
                         <p>021-64280689</p>
                     </span>
             </div>
