--- a/src/component/contact/map.ejs
+++ b/src/component/contact/map.ejs
@@ -33,7 +33,7 @@
                 <div class="final-content">
                     <h3>成都</h3>
                     <p>地址：成都市红星路二段70号四川日报大厦B区4楼</p>
-                    <p>电话：139 8214 2208</p>
+                    <p>电话：400-821-6990</p>
                 </div>
             </div>
 
@@ -137,7 +137,7 @@
                 </div>
                 <div class="final-content">
                     <h3>北京</h3>
-                    <p>地址：北京市朝阳区光华路甲8号和乔大厦A座406室</p>
+                    <p>地址：北京市朝阳区光华路甲8号和乔大厦A座203室</p>
                     <p>电话：010-57185561</p>
                 </div>
             </div>
@@ -174,8 +174,8 @@
                 </div>
                 <div class="final-content">
                     <h3>天津</h3>
-                    <p>地址：天津市和平区赤峰道136号天津国际金融中心712室</p>
-                    <p>电话：159 2222 8062</p>
+                    <p>天津市南开区北马路与城厢西路交口富力大厦7层708室</p>
+                    <p>电话：022-27275920</p>
                 </div>
             </div>
 
@@ -247,7 +247,7 @@
                 </div>
                 <div class="final-content">
                     <h3>合肥</h3>
-                    <p>地址：安徽省合肥市蜀山区黄山路651号汇峰大厦1214室</p>
+                    <p>地址：安徽省合肥市蜀山区潜山路与习友路交口华润大厦A座1805</p>
                     <p>电话：0551-65186360</p>
                 </div>
             </div>
@@ -297,8 +297,8 @@
 
         <div class="branch_name">
             <div>
-            <p>广州</p>
-            <p>GUANGZHOU</p>
+                <p>广州</p>
+                <p>GUANGZHOU</p>
             </div>
             <img src="images/add_city.png">
         </div>
@@ -319,7 +319,7 @@
                 <div class="final-content">
                     <h3>广州</h3>
                     <p>地址：广州市天河区黄埔大道西路33号18楼H</p>
-                    <p>电话：020-37362732</p>
+                    <p>电话：400-821-6990</p>
                 </div>
             </div>
 
@@ -429,7 +429,7 @@
                 <div class="final-content">
                     <h3>上海</h3>
                     <p>地址：上海市徐汇区虹桥路808号加华商务中心D5栋3楼</p>
-                    <p>电话：021-80127158</p>
+                    <p>电话：021-64189891</p>
                 </div>
             </div>
         </div>
@@ -471,8 +471,6 @@
         </div>
     </div>
 
-
-
     <!--青岛-->
     <div class="branch_qingdao">
         <!--显示部分-->
@@ -507,8 +505,6 @@
             </div>
         </div>
     </div>
-
-
     <!--乌鲁木齐-->
     <div class="branch_wulumuqi">
         <!--显示部分-->
@@ -538,7 +534,7 @@
                 <div class="final-content">
                     <h3>乌鲁木齐</h3>
                     <p>地址：乌鲁木齐市经济开发区（头屯河区）天鹅湖路2号爱地大厦20层2002室</p>
-                    <p>电话：15199085275</p>
+                    <p>电话：400-821-6990</p>
                 </div>
             </div>
         </div>
