--- a/src/component/contact/photo.ejs
+++ b/src/component/contact/photo.ejs
@@ -9,7 +9,7 @@
     <div class="page_title">
         <p class="title_English"></p>
 
-        <P class="title_chinese">联系我们</P>
+        <p class="title_chinese">联系我们</p>
 
     </div>
 
@@ -54,7 +54,6 @@
                             <div class="back"><img src="images/chengdu_back.png"></div>
                         </div>
                     </div>
-
                     <div class="container">
                         <div class="back"><img src="images/contact_create.png"></div>
                     </div>
@@ -64,14 +63,12 @@
                             <div class="back"><img src="images/shanghai_back.png"></div>
                         </div>
                     </div>
-
                     <div class="container">
                         <div class="flip">
                             <div class="front"><img src="images/jinan_face.png"></div>
                             <div class="back"><img src="images/jinan_back.png"></div>
                         </div>
                     </div>
-
                     <div class="container">
                         <div class="flip">
                             <div class="front"><img src="images/wulumuqi_face.png"></div>
@@ -105,33 +102,25 @@
                             <div class="back"><img src="images/qingdao_back.png"></div>
                         </div>
                     </div>
-
-                    <div class="container">
-                        <div class="flip">
-                            <div class="front"><img src="images/ningbo_face.png"></div>
-                            <div class="back"><img src="images/ningbo_back.png"></div>
-                        </div>
-                    </div>
-
                 </div>
 
             </div>
-
             <div class="second_contents">
-        <!--        <div class="container" style="height: 410px">
-                    <img src='images/city_one.png' style="height: 410px">
-                </div>-->
+                <!--        <div class="container" style="height: 410px">
+                            <img src='images/city_one.png' style="height: 410px">
+                        </div>-->
             </div>
-
-         <!--   <div class="second_contents">
-
+            <div class="second_contents">
+                <div class="container" style="margin-bottom: 10px;">
+                    <div class="front"><img src="images/contact_jf.png"></div>
+                </div>
                 <div class="container">
                     <div class="flip">
                         <div class="front"><img src="images/ningbo_face.png"></div>
                         <div class="back"><img src="images/ningbo_back.png"></div>
                     </div>
                 </div>
-            </div>-->
+            </div>
         </div>
 
         <!--第三行-->
@@ -161,7 +150,6 @@
                     <div class="back"><img src="images/tianjing_back.png"></div>
                 </div>
             </div>
-
 
         </div>
 
