--- a/src/component/homepage/pageseven.ejs
+++ b/src/component/homepage/pageseven.ejs
@@ -27,7 +27,7 @@
                     <div class="point_box">
                         <div class="point icon_1"></div>
                         <div class="text">
-                            <p>2,000+</p>
+                            <p>10,000+</p>
                             <p>企业客户</p>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                     <div class="point_box">
                         <div class="point icon_2"></div>
                         <div class="text">
-                            <p>200,000+</p>
+                            <p>1,000,000+</p>
                             <p>服务员工</p>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                     <div class="point_box">
                         <div class="point icon_3"></div>
                         <div class="text">
-                            <p>近十亿</p>
+                            <p>近五十亿</p>
                             <p>交易额</p>
                         </div>
                     </div>
