--- a/src/component/contact/form.ejs
+++ b/src/component/contact/form.ejs
@@ -11,7 +11,7 @@
 
             <div class="email">
                 <img src='images/email.png'>
-                <span>sales@jafu.com</span>
+                <span>sales@jiafu.com</span>
             </div>
             <div class="wechat">
                 <img src='images/wechat.png'>
