--- a/src/component/about_jf/history.ejs
+++ b/src/component/about_jf/history.ejs
@@ -8,8 +8,8 @@
 
     <div class="history">
         <div class="Event_history position1">
-            <div hisrory_frame>
-                <img src="../../images/year-history/Dialog-box_4.png" class="year">
+            <div class="hisrory_frame">
+                <img src="images/year-history/Dialog-box_4.png" class="year">
             </div>
             <div class="company-history">
                 <div class="middle">
@@ -31,8 +31,8 @@
             </div>
         </div>
         <div class="Event_history position2">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_3.png" class="year">
+            <div class="hisrory_one">
+                <img src="images/year-history/Dialog-box_3.png" class="year">
             </div>
             <div class="company-history">
                 <div class="middle">
@@ -62,8 +62,8 @@
             </div>
         </div>
         <div class="Event_history position3">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_5.png" class="year">
+            <div class="hisrory_one">
+                <img src="images/year-history/Dialog-box_5.png" class="year">
             </div>
             <div class="company-history">
                 <div class="middle">
@@ -93,8 +93,8 @@
             </div>
         </div>
         <div class="Event_history position4">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_1.png" class="year">
+            <div class="hisrory_one" >
+                <img src="images/year-history/Dialog-box_1.png" class="year">
             </div>
             <div class="company-history">
                 <div class="middle">
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="Event_history position5">
-            <div hisrory_one>
+            <div class="hisrory_one" >
                 <img src="../../images/year-history/Dialog-box_2.png" class="year">
             </div>
             <div class="company-history">
