--- a/src/component/about_jf/history.ejs
+++ b/src/component/about_jf/history.ejs
@@ -133,7 +133,7 @@
         </div>
         <div class="Event_history position5">
             <div class="hisrory_one" >
-                <img src="../../images/year-history/Dialog-box_2.png" class="year">
+                <img src="images/year-history/Dialog-box_2.png" class="year">
             </div>
             <div class="company-history">
                 <div class="middle">
