--- a/src/component/mobile/page_seven.ejs
+++ b/src/component/mobile/page_seven.ejs
@@ -24,7 +24,7 @@
                     <img src="images/page_seven/icon-people.png"/>
                 </div>
                 <div class="text">
-                    <div class="text_one">2,000+</div>
+                    <div class="text_one">10,000+</div>
                     <div class="text_one_text">企业客户</div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <img src="images/page_seven/icon-key.png"/>
                 </div>
                 <div class="text">
-                    <div class="text_one">200,000+</div>
+                    <div class="text_one">1,000,000+</div>
                     <div class="text_one_text">服务员工</div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                     <img src="images/page_seven/icon-uptrend.png"/>
                 </div>
                 <div class="text">
-                    <div class="text_one">近十亿</div>
+                    <div class="text_one">近五十亿</div>
                     <div class="text_one_text">交易额</div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         <div>咨询顾问</div>
                     </div>
                     <div class="title_text">
-                        <p>服务时间:周一至周五(9:00-17:30)</p>
+                        <p>服务时间:周一至周五(8:00-20:00)</p>
                         <p>友情链接:</p>
                             <a href="https://m.dianping.com" class="dp"> <img
                                     src="images/page_seven/icon-HanKow.png"></a>
