--- a/src/view/main.ejs
+++ b/src/view/main.ejs
@@ -34,6 +34,10 @@
 
         <%- include('../component/homepage/pagethree.ejs') %>
 
+        <!--补充页面一-->
+
+        <%- include('../component/homepage/pageaddone.ejs') %>
+
         <!--第四页-->
 
         <%- include('../component/homepage/pagefour.ejs') %>
