--- a/src/component/platform/banner.less
+++ b/src/component/platform/banner.less
@@ -411,3 +411,10 @@
   }
 
 }
+@media screen and (min-width:1460px) {
+  .platform_introduction {
+    .banner_bg{
+      background-size: 100% 85%;
+    }
+  }
+}
