--- a/src/view/homepage_mobile.html
+++ b/src/view/homepage_mobile.html
@@ -25,7 +25,7 @@
         <div class="pageone_nav_icon">
             <div class="pageone_nav_icon_one"><img src="images/page_one/icon-company.png"></div>
             <div class="pageone_nav_icon_two"><img src="images/page_one/icon-line.png"></div>
-            <div class="passone_nav_icon_text">&#x5609;&#x798F;&#x5F39;&#x6027;&#x798F;&#x5229;&#x5E73;&#x53F0;</div>
+            <div class="passone_nav_icon_text">嘉福弹性福利平台</div>
         </div>
         <div class="pageone_nav_service">
             <div class="pageone_nav_service_people" onclick="jfCustomerService.click()"><img src="images/page_one/icon-artificial.png"></div>
