--- a/src/component/about_jf/history.less
+++ b/src/component/about_jf/history.less
@@ -41,7 +41,7 @@
      /* filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/history.png',  sizingMethod='scale');/*IE8*/
       max-width: 1073px;
       margin: 0 auto;
-      background-image: url(../../images/year-history/background_jiafu.png);
+      background-image: url(../images/year-history/background_jiafu.png);
       background-size: 100%;
       background-position: center;
       background-repeat: no-repeat;
